--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <section id='nav-bar'>
       <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="#"><img src="img/laylogo1.jpg"></a>
+  <a class="navbar-brand" href="#"><img src="img/laylogo1.JPG"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
