--- a/index.html
+++ b/index.html
@@ -119,28 +119,28 @@
           <i class="fa fa-desktop"></i>
         </div>
         <h3>Engineers</h3>
-        <p>We make the best websites for upcoming companies.We are currently working on 50 projrcts.</p>
+        <p>We make the best websites for upcoming companies.We are currently working on 50 projects.</p>
       </div>
       <div class="col-md-3 text-center">
         <div class="icon">
           <i class="fa fa-user-md"></i>
         </div>
         <h3>Doctors</h3>
-        <p>We make the best websites for upcoming companies.We are currently working on 50 projrcts.</p>
+        <p>We make the best websites for upcoming companies.We are currently working on 50 projects.</p>
       </div>
       <div class="col-md-3 text-center">
         <div class="icon">
           <i class="fa fa-home"></i>
         </div>
         <h3>Architects</h3>
-        <p>We make the best websites for upcoming companies.We are currently working on 50 projrcts.</p>
+        <p>We make the best websites for upcoming companies.We are currently working on 50 projects.</p>
       </div>
       <div class="col-md-3 text-center">
         <div class="icon">
           <i class="fa fa-briefcase"></i>
         </div>
         <h3>Business Reps</h3>
-        <p>We make the best websites for upcoming companies.We are currently working on 50 projrcts.</p>
+        <p>We make the best websites for upcoming companies.We are currently working on 50 projects.</p>
       </div>
     </div>
   </div>
@@ -184,7 +184,7 @@
             <a href='https://www.instagram.com/regi.jr_2/'><li><i class="fa fa-instagram"></i></li></a>
           </ul>
         </div>
-        <h2>Kevin Reji</h2>
+        <h2>Kevin Regi</h2>
         <h3>Engineer</h3>
         <p>Founder and CEO</p>
       </div>
@@ -285,7 +285,7 @@
             <a href='https://www.linkedin.com/in/ion-jestin-962695170?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BnqvxHwlGR0K5khH0DrrpaA%3D%3D'><li><i class="fa fa-linkedin"></i></li></a>
           </ul>
         </div>
-        <h2>Ion Jeston Paul</h2>
+        <h2>Ion Jestin Paul</h2>
         <h3>Engineer</h3>
         <p>Founder and CEO</p>
       </div>
