--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
       <div class="col-md-3">
         <div class="single-price">
           <div class="price-head">
-            <h2>Weather App</h2>
+            <h2>Lay Weather</h2>
             <p>Web Services</p>
           </div>
           <div class="price-content">
@@ -324,11 +324,29 @@
             </ul>
           </div>
           <div class="price-button">
-            <a class="buy-btn" href="#">Know Your Weather</a>
+            <a class="buy-btn" href="https://layweather.herokuapp.com/">Know Your Weather</a>
           </div>
         </div>
-
-      </div>
+	</div>
+	    <div class="col-md-3">
+        <div class="single-price">
+          <div class="price-head">
+            <h2>Knight Lay apk</h2>
+            <p>Game Development</p>
+          </div>
+          <div class="price-content">
+            <ul>
+              <li><i class="fa fa-check-circle-o"></i>Weather Forcast</li>
+              <li><i class="fa fa-check-circle-o"></i>Any location worldwide</li>
+              <li><i class="fa fa-check-circle-o"></i>Any time</li>
+              <li><i class="fa fa-check-circle-o"></i>Updated every 15 mins</li>
+            </ul>
+          </div>
+          <div class="price-button">
+            <a class="buy-btn" href="https://layweather.herokuapp.com/">Download apk</a>
+          </div>
+        </div>
+	</div>
     </div>
   </div>
 </section>
