--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 	    <div class="col-md-3">
         <div class="single-price">
           <div class="price-head">
-            <h2>Knight Lay apk</h2>
+            <h2>Knight Lay</h2>
             <p>Game Development</p>
           </div>
           <div class="price-content">
