--- a/index.html
+++ b/index.html
@@ -343,7 +343,24 @@
             </ul>
           </div>
           <div class="price-button">
-            <a class="buy-btn" href="https://layweather.herokuapp.com/">Download apk</a>
+            <a class="buy-btn" href="https://drive.google.com/file/d/1kWGgg1RTvX3-RuZfuMGwCb22q29_9HgX/view?usp=sharing">Download apk</a>
+          </div>
+        </div>
+	</div>
+	    <div class="col-md-3">
+        <div class="single-price">
+          <div class="price-head">
+            <h2>Knight Lay</h2>
+            <p>Co-Living & Habitation</p>
+          </div>
+          <div class="price-content">
+            <ul>
+              <li><i class="fa fa-check-circle-o"></i>Where artists can come , host small events, gather at the small cafe or the open amphitheather and make wonderful memories</li>
+              <li><i class="fa fa-map-marker"></i>Thrissur, Kerala</li>
+            </ul>
+          </div>
+          <div class="price-button">
+            <a class="buy-btn" href="https://www.instagram.com/tv/CEV5xHuDnwQ/">Watch video</a>
           </div>
         </div>
 	</div>
