--- a/index.html
+++ b/index.html
@@ -331,39 +331,54 @@
 	    <div class="col-md-3">
         <div class="single-price">
           <div class="price-head">
-            <h2>Knight Lay</h2>
+            <h2>Knight lay</h2>
             <p>Game Development</p>
           </div>
           <div class="price-content">
             <ul>
-              <li><i class="fa fa-check-circle-o"></i>Weather Forcast</li>
-              <li><i class="fa fa-check-circle-o"></i>Any location worldwide</li>
-              <li><i class="fa fa-check-circle-o"></i>Any time</li>
-              <li><i class="fa fa-check-circle-o"></i>Updated every 15 mins</li>
+              <li>Upcoming award winning 2D platform on game development from LD initiative Obsequious Studios.</li>
+              <li>Addictive</li>
             </ul>
           </div>
           <div class="price-button">
-            <a class="buy-btn" href="https://drive.google.com/file/d/1kWGgg1RTvX3-RuZfuMGwCb22q29_9HgX/view?usp=sharing">Download apk</a>
+            <a class="buy-btn" href="https://drive.google.com/file/d/1kWGgg1RTvX3-RuZfuMGwCb22q29_9HgX/view?usp=sharing">Play Demo now</a>
           </div>
         </div>
-	</div>
+      </div>
 	    <div class="col-md-3">
         <div class="single-price">
           <div class="price-head">
-            <h2>Knight Lay</h2>
-            <p>Co-Living & Habitation</p>
+            <h2>Knight lay</h2>
+            <p>Game Development</p>
           </div>
           <div class="price-content">
             <ul>
-              <li><i class="fa fa-check-circle-o"></i>Where artists can come , host small events, gather at the small cafe or the open amphitheather and make wonderful memories</li>
-              <li><i class="fa fa-map-marker"></i>Thrissur, Kerala</li>
+              <li>Upcoming award winning 2D platform on game development from LD initiative Obsequious Studios.</li>
+              <li>Addictive</li>
+            </ul>
+          </div>
+          <div class="price-button">
+            <a class="buy-btn" href="https://drive.google.com/file/d/1kWGgg1RTvX3-RuZfuMGwCb22q29_9HgX/view?usp=sharing">Play Demo now</a>
+          </div>
+        </div>
+      </div>
+  <div class="col-md-3">
+        <div class="single-price">
+          <div class="price-head">
+            <h2>Co-Living</h2>
+            <p>Habitation</p>
+          </div>
+          <div class="price-content">
+            <ul>
+              <li>A place where artists and tourists can come, host small events, gather at the cafe or the open amphitheater and make wonderful memories.</li>
+              <li><i class="fa fa-map-marker"></i> Thrissur, Kerala</li>
             </ul>
           </div>
           <div class="price-button">
             <a class="buy-btn" href="https://www.instagram.com/tv/CEV5xHuDnwQ/">Watch video</a>
           </div>
         </div>
-	</div>
+      </div>
     </div>
   </div>
 </section>
