--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
           <ul>
             <a href='https://www.facebook.com/mukund.harikumar'><li><i class="fa fa-facebook"></i></li></a>
             <a href='https://www.instagram.com/muku_nd.h/'><li><i class="fa fa-instagram"></i></li></a>
-	    
+	    <a href='https://www.youtube.com/channel/UCCsLgl9SvQlq2Umyisi3HoA?reload=9'><li><i class="fa fa-youtube-play"></i</li></a>
           </ul>
         </div>
         <h2>Mukund Harikumar</h2>
