--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
         <h3>Architect</h3>
         <p>Founder and CEO</p>
       </div>
+	  </div>
     <div class="row">
       <div class="col-md-3 profile-pic text-center">
         <div class="img-box" >
@@ -243,13 +244,14 @@
           <ul>
             <a href='https://www.facebook.com/mukund.harikumar'><li><i class="fa fa-facebook"></i></li></a>
             <a href='https://www.instagram.com/muku_nd.h/'><li><i class="fa fa-instagram"></i></li></a>
-	    <a href='https://www.youtube.com/channel/UCCsLgl9SvQlq2Umyisi3HoA?reload=9'><li><i class="fa fa-youtube-play"></i</li></a>
+	    <a href='https://www.youtube.com/channel/UCCsLgl9SvQlq2Umyisi3HoA?reload=9'><li><i class="fa fa-youtube-play"></i></li></a>
           </ul>
         </div>
         <h2>Mukund Harikumar</h2>
         <h3>Engineer</h3>
         <p>Founder and CEO</p>
       </div>
+	    </div>
     <div class="row">
       <div class="col-md-3 profile-pic text-center">
         <div class="img-box" >
