--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <div class="row">
       <div class="col-md-3 profile-pic text-center">
         <div class="img-box" >
-          <img src="img/louie.jpg" class="img-responsive">
+          <img src="img/louie3.jpg" class="img-responsive">
           <ul>
             <a href='https://www.facebook.com/louie.antony/'><li><i class="fa fa-facebook"></i></li></a>
             <a href='https://www.instagram.com/louie_antony/'><li><i class="fa fa-instagram"></i></li></a>
