--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
         </div>
     </div>
     <div class="carousel-item">
+       <img src="img/layday10.jpg" class="d-block img-fluid">
+	<div class="carousel-caption">
+	  <h5>LayDay Productions</h5>
+    </div>
+    </div>
+    <div class="carousel-item">
       <img src="img/layday3.jpg" class="d-block img-fluid">
         <div class="carousel-caption">
           <h5>LayDay Productions</h5>
