--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
           <h5>LayDay Productions</h5>
         </div>
     </div>
+	  <div class="carousel-item active">
+      <img src="img/layday.jpg" class="d-block img-fluid">
+        <div class="carousel-caption">
+          <h5>LayDay Productions</h5>
+        </div>
+    </div>
     <div class="carousel-item">
       <img src="img/layday2.jpg" class="d-block img-fluid">
         <div class="carousel-caption">
